fixed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 0.5vw;
+  width: 0.8vw;
 }
 
 ::-webkit-scrollbar-track {
